# fort_agent_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  deploy_aarch64.sh  fort-agent.conf  readme.md
apps/: CMakeLists.txt  fort_agent_app.cpp
cmake/: OpenJAUS.cmake
config/: fort-agent.conf  fort_agent_app.ojconf
docs/html/: ControlState_8h.html  ControlState_8h__dep__incl.md5  ControlState_8h__incl.md5  ControlState_8h_source.html  EmergencyState_8h.html  EmergencyState_8h__dep__incl.md5  EmergencyState_8h__incl.md5  EmergencyState_8h_source.html  FORTJoystickHelpers_8cpp.html  FORTJoystickHelpers_8cpp__incl.md5  FORTJoystickHelpers_8cpp_a21971a6ea22f0b02b9ddfcbaebb7600f_cgraph.md5  FORTJoystickHelpers_8cpp_a321879b3aa9e7522c584aeb21bf5d966_icgraph.md5  FORTJoystickHelpers_8cpp_a3413a023e32b549e81549f69ddc78761_icgraph.md5  FORTJoystickHelpers_8cpp_a7d0ef2e3f3dd15201b18b4146732befd_icgraph.md5  FORTJoystickHelpers_8h.html  FORTJoystickHelpers_8h__dep__incl.md5  FORTJoystickHelpers_8h__incl.md5  FORTJoystickHelpers_8h_a21971a6ea22f0b02b9ddfcbaebb7600f_cgraph.md5  FORTJoystickHelpers_8h_a21971a6ea22f0b02b9ddfcbaebb7600f_icgraph.md5  FORTJoystickHelpers_8h_a2fa084c688310613f3bad7bef64cc45f_cgraph.md5  FORTJoystickHelpers_8h_a321879b3aa9e7522c584aeb21bf5d966_cgraph.md5  FORTJoystickHelpers_8h_a3413a023e32b549e81549f69ddc78761_icgraph.md5  FORTJoystickHelpers_8h_a4f8045a15a5adcb76e648f3e2fb496d8_icgraph.md5  FORTJoystickHelpers_8h_a7d0ef2e3f3dd15201b18b4146732befd_cgraph.md5  FORTJoystickHelpers_8h_source.html  IVehicleState_8h.html  IVehicleState_8h__dep__incl.md5  IVehicleState_8h__incl.md5  IVehicleState_8h_source.html  InitializeState_8h.html  InitializeState_8h__dep__incl.md5  InitializeState_8h__incl.md5  InitializeState_8h_source.html  JausBridgeSingleton_8cpp.html  JausBridgeSingleton_8cpp__incl.md5  JausBridgeSingleton_8h.html  JausBridgeSingleton_8h__dep__incl.md5  JausBridgeSingleton_8h__incl.md5  JausBridgeSingleton_8h_source.html  JausBridge_8cpp.html  (+481 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+86 more)
include/fort_agent/: coapHelpers.h  coapJausBridge.h  coapPortTracker.h  dbgTrace.h  fort_agent.h  serialHandler.h  slip.h  spammyLogMsg.h  spdlog_config.h  uartCoapBridge.h  uartCoapBridgeSingleton.h  version.h
include/fort_agent/jaus/: JausBridge.h  JausBridgeSingleton.h  JausClient.h  JausClientImpl.h  vehicleStateMachine.h
include/fort_agent/jaus/states/: ControlState.h  EmergencyState.h  IVehicleState.h  InitializeState.h  ReadyState.h  ShutdownState.h  StandbyState.h
include/fort_agent/uart/FORTJoystick/: FORTJoystickHelpers.h  coapSRCPro.h
src/: CMakeLists.txt  coapHelpers.cpp  coapJausBridge.cpp  coapPortTracker.cpp  fort_agent.cpp  serialHandler.cpp  slip.cpp  uartCoapBridge.cpp  uartCoapBridgeSingleton.cpp
src/jaus/: JausBridge.cpp  JausBridgeSingleton.cpp  JausClientImpl.cpp
src/uart/FORTJoystick/: FORTJoystickHelpers.cpp  coapSRCPro.cpp
tests/: CMakeLists.txt  coap_helpers_test.cpp  fort_agent_test.cpp  jaus_client_mock_test.cpp  test_coapSRCPro.cpp
tests/mocks/: MockJausClient.h
